-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.1
-
None
-
Windows Desktop.
-
55f0343a99ffd920e2e14ba2bb7669d78224fe42
Since the QTBUG-46552 fix a trivial UDP socket client has spurious readyRead signals when writeDatagram is called. Calling hasPendingDatagrams in the signal handler returns true but in fact an error WSAECONNREST is being detected. This code is not an error as documented by Micorsoft. It occurs because the datagram is written to a port on the local host where there is no server listening which is a perfectly valid scenario.
Demo application attached.
- is duplicated by
-
QTBUG-114321 ICMP packet about unreachable port triggers readyRead in QUdpSocket
-
- Closed
-